2003-06-13  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/jtagio.cc: Set JTAG_P_CLOCK param to 0xff instead of 0xfd to
	speed things up a little bit.
	* src/remote.cc: Remove a debug output statement.

2003-06-12  Theodore A. Roth  <troth@openavr.org>

	* doc/todo.txt: Remove some items that have been fixed or are now
	working.

2003-06-12  Theodore A. Roth  <troth@openavr.org>

	* src/jtagrw.cc (jtagWrite): Print debug message if addr or length is
	odd.
	* src/remote.cc (reportStatusExtended): New function for replying with
	a 'T' packet instead of an 'S' packet.
	Use new function whenever a breakpoint is hit from a step or continue
	command from gdb.

2003-06-12  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/remote.cc: Remove call to interruptProgram() when handling a 'g'
	packet. This was accidently committed and should not have been since
	it causes the jtagice box to corrupt the program counter. Not good.

2003-06-11  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/jtagio.cc: Remove check failure for jtag ice HW version.
	* src/remote.cc: Fix handling the 'M' command from GDB to allow for
	odd addresses and lengths.

2003-06-05  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Check for intl library since linking to bfd may
	require it (this affects cygwin). [Thanks Colid O'Flynn for reporting
	this.]

2003-05-04  Theodore A. Roth  <troth@openavr.org>

	* src/jtagprog.cc: Speed up programming the flash by skipping pages
	that are all ones.
	[Contributed by Alan Willis <willisa@erols.com>.]

2003-05-04  Nils Kristian Strom  <nilsst@omegav.ntnu.no>

	* src/main.cc: Allow all programmer-operations (erase device,
	write memory, write fuses, write lockbits) in one pass.

2003-05-04  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Check for libbfd and libiberty, complain if either is
	missing.
	Bump version.